--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -43,6 +43,11 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
 /*             background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab); */
 /*             background-size: 400% 400%; */
 /*             animation: gradient 15s ease infinite; */
+            --bg-color: #cfb8b0;
+            --main-color: #64483f;
+            --secondary-color: #fed2b9;
+            background-color: var(--bg-color)
+
   }
         .light-theme {
             --bg-color: #cfb8b0;
@@ -166,10 +171,16 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
             width: 200px;
             position: fixed;
             alignment: left;
-            background-color: #64483f;
+            background-color: var(--main-color);
             overflow-x: hidden;
             padding-top: 20px;
             z-index: 0;
+        }
+        .sidenav a {
+            color: var(--bg-color)
+        }
+        .sidenav a:hover {
+            color: var(--secondary-color)
         }
 
 
