--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -7,7 +7,7 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
 <!DOCTYPE HTML>
 <html lang="en">
 
-{% set basename = "Milkshake" %}
+{% set basename = "Team Milkshake" %}
 {% set github = "https://github.com/nighthawkcoders" %}
 
 
@@ -18,7 +18,7 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
         :root{
             --white: whitesmoke;
             --black: black;
-            --grey: #3c3f41;
+            --black: #3c3f41;
         }
 
         html, body{
