--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -12,10 +12,20 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
             <li class="nav-item active">
                 <a class="nav-link" href="/mainabout">Home <span class="sr-only">(current)</span></a>
             </li>
+            <a class="nav-link" href="/mainabout">About Us <span class="sr-only">(current)</span></a>
             <li class="nav-item dropdown">
-                <a class="nav-link" href="/mainabout">About Us<span class="sr-only">(current)</span></a>
-                </div>
-            <li class="nav-item dropdown">
+                <a class="nav-link" href="/mainabout">Project Green<span class="sr-only">(current)</span></a>
+            </li>
+                <a class="nav-link" href="/mainabout">World Clock<span class="sr-only">(current)</span></a>
+            </li>
+                <a class="nav-link" href="/mainabout">Language Translator<span class="sr-only">(current)</span></a>
+            </li>
+                <a class="nav-link" href="/mainabout">Rankings<span class="sr-only">(current)</span></a>
+            </li>
+                <a class="nav-link" href="/mainabout">Activities<span class="sr-only">(current)</span></a>
+            </li>
+                <a class="nav-link" href="/mainabout">Mini Labs<span class="sr-only">(current)</span></a>
+            </li>
                 <a class="nav-link" href="/mainabout">Give us feedback!<span class="sr-only">(current)</span></a>
                 </div>
             </li>
