--- a/templates/aboutjacob.html
+++ b/templates/aboutjacob.html
@@ -35,10 +35,10 @@
   {            minWidth: 200.00,}
   {            scale: 1.00,}
   {            scaleMobile: 1.00}
-  {        })#}
-{    </script>#}
-{{% endblock %}#}
-{</html>#}
+  {        })}
+{    </script>}
+{{% endblock %}}
+{</html>}
 {% extends "layouts/base.html" %}
 {% block content %}
 
