commit before joining branch

--- a/templates/about_us/leah.html
+++ b/templates/about_us/leah.html
@@ -99,6 +99,9 @@
         jokework {
             margin-left: 250px;
         }
+        body {
+            background-color: #8e87b7 !important;
+        }
     </style>
 {% endblock %}
 
