--- a/templates/about_us/evan.html
+++ b/templates/about_us/evan.html
@@ -5,6 +5,17 @@
     <title>About Evan</title>
 </head>
 
+<style>
+    img{
+        border-radius:50px;
+    }
+
+    table td{
+        border: 1px solid black;
+        padding:10px
+    }
+</style>
+
 {% extends 'layouts/base.html' %}
 
 {%  block body %}
@@ -17,33 +28,81 @@
 
 <h2> About Me </h2>
 
-    <p style="font-size: 18px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed porta lacus pulvinar dolor tincidunt,
-        imperdiet suscipit urna dapibus. Nullam vitae dictum ante. Vivamus laoreet dolor tincidunt eros
-        lacinia, at pulvinar nulla hendrerit. Donec auctor dolor eu elit ultricies efficitur. Nulla vel
-        sapien lectus. Morbi tempor felis ac dui sollicitudin cursus.</p>
+    <p style="font-size: 18px;">Hi my name is Evan Sanchez! I like playing guitar, video games, and listening to music. I didn't know
+    almost anything about computer programming before this class, but I'm learning a lot and enjoying it. My favorite language
+    to program in at the moment is JavaScript, but that might change as I learn more languages. </p>
 
-    <img src="https://picsum.photos/500/300">
+    <hr>
 
-    <img src="https://picsum.photos/500/300">
+    <div style="float:left">
+     <button class='btn' onclick='toggleSwitch()'> Mask Toggle</button> <br>
 
-    <hr> <h2>Image Toggle</h2>
+    <img style="padding-top:10px" id='img1' src="https://qph.fs.quoracdn.net/main-qimg-635cfcea38e601b36571db1af9d7e2e5-lq">
 
-    <img id='img1' src="https://picsum.photos/300">
+    </div>
 
+    <table style="margin-left:50%">
+        <tr>
+            <td><a target="_blank" href="https://github.com/deimie">Github Profile</a></td>
+            <td><a target="_blank" href="https://github.com/SimonBrunzell/flask_portfolio/commits?author=deimie">Commits</a></td>
+            <td><a target="_blank" href="https://github.com/SimonBrunzell/flask_portfolio/projects/1?card_filter_query=assignee%3Adeimie">Scrum Board Tasks</a></td>
+            <td><a target="_blank" href="https://docs.google.com/document/d/1utBhod9HOMFYtKowLyFNyT5Rc6tgHKbGJc-yEbY509U/edit?usp=sharing">Pair Journal</a></td>
+        </tr>
+    </table>
 
-  <br>  <button onclick='toggleSwitch()'> Click me to Toggle</button>
+    <hr>
+
+        <div style="background-color:#64483F; border-radius:50px; height:180px; width:500px; margin-left:50%">
+                <h1 style="font-size:50px">Geolocation API</h1>
+                <button class="btn" id = "find-me">Show my location</button><br/>
+                <p id = "status"></p>
+                <a id = "map-link" target="_blank"></a>
+        </div>
+
 </section>
 
 </body>
 
     <script>
     function toggleSwitch(){
-        if(document.getElementById('img1').src == 'https://picsum.photos/300'){
-            document.getElementById('img1').src = 'https://picsum.photos/300?grayscale';
+        if(document.getElementById('img1').src == 'https://qph.fs.quoracdn.net/main-qimg-635cfcea38e601b36571db1af9d7e2e5-lq'){
+            document.getElementById('img1').src = 'https://images.squarespace-cdn.com/content/v1/517dbeece4b08d6929ebd7d0/1367439346257-44IUNBVJ3FVIFDTTO2E4/Hydrohull+300x500.png';
         } else{
-            document.getElementById('img1').src = 'https://picsum.photos/300';
+            document.getElementById('img1').src = 'https://qph.fs.quoracdn.net/main-qimg-635cfcea38e601b36571db1af9d7e2e5-lq';
         }
     }
+
+    function geoFindMe() {
+
+        const status = document.querySelector('#status');
+        const mapLink = document.querySelector('#map-link');
+
+        mapLink.href = '';
+        mapLink.textContent = '';
+
+        function success(position) {
+            const latitude  = position.coords.latitude;
+            const longitude = position.coords.longitude;
+
+            status.textContent = '';
+            mapLink.href = `https://www.openstreetmap.org/#map=18/${latitude}/${longitude}`;
+            mapLink.textContent = `Latitude: ${latitude} °, Longitude: ${longitude} °`;
+        }
+
+        function error() {
+            status.textContent = 'Unable to retrieve your location';
+        }
+
+        if(!navigator.geolocation) {
+            status.textContent = 'Geolocation is not supported by your browser';
+        } else {
+            status.textContent = 'Locating…';
+            navigator.geolocation.getCurrentPosition(success, error);
+        }
+
+    }
+
+    document.querySelector('#find-me').addEventListener('click', geoFindMe);
     </script>
 
 {%  endblock %}
