--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -7,7 +7,7 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
 <!DOCTYPE HTML>
 <html lang="en">
 
-{% set basename = "Nighthawk Coding" %}
+{% set basename = "Levss" %}
 {% set github = "https://github.com/nighthawkcoders" %}
 {% set twitter = "https://twitter.com/NighthawkCoding" %}
 {% set youtube = "https://www.youtube.com/channel/UClIKOsDS5dsfzFA3zveDT3Q?view_as=subscriber" %}
@@ -40,9 +40,9 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
             color: var(--white);
             background-color: var(--bg);
             color: var(--txt);
-            background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+         <!--   background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
             background-size: 400% 400%;
-            animation: gradient 15s ease infinite;
+            animation: gradient 15s ease infinite; -->
   }
 
   @keyframes gradient {
