dark mode almost done

--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -191,8 +191,8 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
 
         <br>
             <!-- adds the dark mode toggle to the sidebar -->
-            <div class="toggle-container">
-                <input type="checkbox" id="switch" name="theme" /><label for="switch">Toggle</label>
+            <div class="toggle-container" style="">
+                <input type="checkbox" id="switch" name="theme" /><label for="switch">Dark Mode</label>
             </div>
 
     </div>
