--- a/templates/about_us/sanjay.html
+++ b/templates/about_us/sanjay.html
@@ -8,7 +8,7 @@
     <button onclick="theme()">Change Theme</button>
     <p>Current Theme: <span id="current">green</span></p>
 </div>
-<h1 style="text-align:center">
+<h1 style="text-align:center;text-transform: uppercase">
 Sanjay Bharadwaj
 </h1>
 <section class="description container">
