Rearranged the Navbar to look better

--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -163,22 +163,29 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
     <div class="sidenav">
         <br>
         <br>
-        <a href="/apec">AP European History</a>
+        <a style="padding-left: 20px;"  href="/apec">AP European History</a>
         <br>
-        <a href="/apush">AP US History</a>
         <br>
-        <a href="/biology">AP Biology</a>
+        <a style="padding-left: 20px;" href="/apush">AP US History</a>
         <br>
-        <a href="/calcab">AP Calculus AB</a>
         <br>
-        <a href="/chemistry">AP Chemistry</a>
+        <a style="padding-left: 20px;" href="/biology">AP Biology</a>
         <br>
-        <a href="/csp">AP Computer Science Principles</a>
         <br>
-        <a href="/stats">AP Statistics</a>
+        <a style="padding-left: 20px;" href="/calcab">AP Calculus AB</a>
+        <br>
+        <br>
+        <a style="padding-left: 20px;" href="/chemistry">AP Chemistry</a>
+        <br>
+        <br>
+        <a style="padding-left: 20px;" href="/csp">AP CSP </a>
+        <br>
+        <br>
+        <a style="padding-left: 20px;" href="/stats">AP Statistics</a>
+        <br>
         <br>
             <!-- adds the dark mode toggle to the sidebar -->
-            <div class="toggle-container" style="">
+            <div class="toggle-container" style="padding-left: 20px;">
                 <input type="checkbox" id="switch" name="theme" /><label for="switch">Dark Mode</label>
             </div>
     </div>
