--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -31,7 +31,7 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
 </style>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="/">{{basename}}</a>
+    <a style="color:var(--txt);"   class="navbar-brand" href="/">{{basename}} </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -72,9 +72,9 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
     </style>
   
     <!--Clock thing-->
-    <div class="btn-group">
+    <div style="color:var(--txt);" class="btn-group">
         <!-- Clock display -->
-        <div class="px-3 text-dark">
+        <div class="px-3" style="color:var(--txt);">
             <span id="clock">12/2/2021, 2:45:33 PM</span>
         </div>
     </div>
