--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -57,21 +57,21 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
         html, body{
             margin: 0;
             height: 100%;
-/*             animation: fadein 2s; */
-/*             -moz-animation: fadein 2s;  *//* Firefox */
-/*             -webkit-animation: fadein 2s;  *//* Safari and Chrome */
-/*             -o-animation: fadein 2s;  *//* Opera */
-/*             background-color: var(--grey);+-+ */
-/*             color: var(--white); */
-/*             background-color: var(--bg); */
-/*             color: var(--txt); */
-/*             background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab); */
-/*             background-size: 400% 400%; */
-/*             animation: gradient 15s ease infinite; */
+            /*             animation: fadein 2s; */
+            /*             -moz-animation: fadein 2s;  *//* Firefox */
+            /*             -webkit-animation: fadein 2s;  *//* Safari and Chrome */
+            /*             -o-animation: fadein 2s;  *//* Opera */
+            /*             background-color: var(--grey);+-+ */
+            /*             color: var(--white); */
+            /*             background-color: var(--bg); */
+            /*             color: var(--txt); */
+            /*             background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab); */
+            /*             background-size: 400% 400%; */
+            /*             animation: gradient 15s ease infinite; */
             --bg-color: #cfb8b0;
             --main-color: #64483f;
             --secondary-color: #fed2b9;
-            background-color: var(--bg-color)
+            background-color: var(--bg:)
 
   }
         .light-theme {
@@ -188,28 +188,25 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
             width: 200px;
             position: fixed;
             alignment: left;
-            background-color: var(--main-color);
+            background-color: var(--sidebarbg);
+            color: var(--txt);
             overflow-x: hidden;
             padding-top: 20px;
             z-index: 0;
         }
         .sidenav a {
-            color: var(--bg-color)
-        }
-        .sidenav a:hover {
-            color: var(--secondary-color)
+            color: var(--txt);
         }
 
-
-        A {text-decoration:none;color:var(--main-color)}
-        A:hover {text-decoration:none;color:var(--secondary-color);font-weight: 500;}
 
         nav {
             background-color: #ceb680;
         }
 
-
-
+        A:link {text-decoration:none;color: var(--txt);}
+        A:visited {text-decoration:none;color: var(--txt);}
+        A:active {text-decoration:none;color: var(--txt);}
+        A:hover {text-decoration:none;color:var(--visitlink);}
 
     </style>
 
