--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -71,7 +71,7 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
             --bg-color: #cfb8b0;
             --main-color: #64483f;
             --secondary-color: #fed2b9;
-            background-color: var(--bg:)
+            background-color: var(--bg)
 
   }
         .light-theme {
@@ -151,8 +151,10 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
             display: inline-block;
             border-radius: 25px;
             transition: all .2s;
-            color: var(--main-color);
-            border: 2px solid var(--main-color)
+            color: var(--button);
+            border: 2px solid var(--button)
+        }
+
         }
 
         .btn:hover {
@@ -197,7 +199,6 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
         .sidenav a {
             color: var(--txt);
         }
-
 
         nav {
             background-color: #ceb680;
