--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -54,8 +54,7 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
 </style>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a style="color:var(--txt);"   class="navbar-brand" href="/">{{basename}} </a>
-    <a class="navbar-brand" href="/">{{basename}} <div class="nav-border"></div></a>
+    <a style="color:var(--txt);" class="navbar-brand" href="/">{{basename}} <div class="nav-border"></div></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
