--- a/templates/Chase.html
+++ b/templates/Chase.html
@@ -64,5 +64,12 @@
             }
         </style>
     </div>
+    <div>
+    <h1> Free Games on Epic Games API </h1>
+        <b>{{ fgame[0] }}, {{ fgame[1] }}, {{ fgame[2] }}</b>
+
+    </div>
+
+
 {%endblock%}
 </html>
