flashcard page color issue fix

--- a/templates/flashcards.html
+++ b/templates/flashcards.html
@@ -75,12 +75,12 @@
     }
 
     .flashcard-front {
-       background-color: #fed2b9;
-       color: darken(#64483f,10%);
+       background-color: var(--main-color);
+       color: var(--secondary-color);
     }
     .flashcard-back {
-      background-color: #64483f;
-      color: #fed2b9;
+      background-color: var(--secondary-color);
+      color: var(--main-color);
       transform: rotateX(180deg);
     }
     h2 {
