--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -142,32 +142,24 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
             color: var(--catdrop);
         }
 
-        .btn,
-        .btn:link,
-        .btn:visited {
+        .btn{
             text-transform: uppercase;
             text-decoration: none;
             padding: .5em 2em;
             display: inline-block;
             border-radius: 25px;
             transition: all .2s;
-            color: var(--button);
-            border: 2px solid var(--button)
+            color: var(--main-color);
+            border: 2px solid var(--main-color)
         }
 
-        }
 
         .btn:hover {
             color: var(--secondary-color);
             background-color: var(--main-color);
             font-weight: 700;
-            box-shadow: 0 20px 40px rgba(255, 255, 255, 0.2);
         }
 
-        .btn:active {
-            transform: translateY(-1px);
-            box-shadow: 0 5px 10px rgba(255, 255, 255, 0.2);
-        }
         /*.button {
             padding: .5em 2em;
             border-radius: 20px;
@@ -203,11 +195,11 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
         nav {
             background-color: #ceb680;
         }
-
-        A:link {text-decoration:none;color: var(--txt);}
-        A:visited {text-decoration:none;color: var(--txt);}
-        A:active {text-decoration:none;color: var(--txt);}
-        A:hover {text-decoration:none;color:var(--visitlink);}
+        a {
+            color: var(--main-color);
+            text-decoration: none;
+        }
+        A:hover {text-decoration:none;color:var(--secondary-color);font-weight: 700;}
 
     </style>
 
@@ -251,16 +243,27 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
 
 <!-- script for dark mode toggle -->
 <script>
+//     if (localStorage.getItem("theme") =="dark") {
+//         trans();
+//         document.documentElement.setAttribute('data-theme', 'dark');
+//         localStorage.setItem("theme","dark");
+//     } else {
+//         trans();
+//         document.documentElement.setAttribute('data-theme', 'light');
+//         localStorage.setItem("theme","light")
+//     }
+
     // checking to see if the dark theme checkbox has been clicked
     var checkbox = document.querySelector('input[name=theme]');
-
     checkbox.addEventListener('change', function() {
         if(this.checked) {
-            trans()
-            document.documentElement.setAttribute('data-theme', 'dark')
+            trans();
+            document.documentElement.setAttribute('data-theme', 'dark');
+            localStorage.setItem("theme","dark");
         } else {
-            trans()
-            document.documentElement.setAttribute('data-theme', 'light')
+            trans();
+            document.documentElement.setAttribute('data-theme', 'light');
+            localStorage.setItem("theme","light")
         }
     });
 
