--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -81,11 +81,8 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
                 </li>
             </ul>
 
-            <a class="nav-link" href={{ url_for('index') }}>Portfolio <div class="nav-border"></div></a>
             <a class="nav-link" href="/flashcards/">Flash Cards <div class="nav-border"></div></a>
-
-            <a class="nav-link" href={{ url_for('index') }}>Portfolio</a>
-            <a class="nav-link" href="/notes">Notes</a>
+            <a class="nav-link" href="/notes">Notes                         <div class="nav-border"></div></a>
         </div>
     </div>
   
