--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -38,6 +38,7 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
             --sidebarbg:#64483f;
             --visitlink:#fed2b9;
             --navbarbg: #fed2b9;
+            --simonbg: #b76b52;
         }
 
         html[data-theme='dark'] {
@@ -52,6 +53,7 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
             --sidebarbg:#16100F;
             --visitlink:#c5bebd;
             --navbarbg: #3b2d29;
+            --simonbg: #291F1C;
         }
 
         html, body{
